--- a/WebApp/src/i18n/locales/tr/common.json
+++ b/WebApp/src/i18n/locales/tr/common.json
@@ -1,7 +1,16 @@
 {
   "nav": {
-    "dashboard": "Dashboard",
-    "users": "Kullanıcılar"
+    "dashboard": "Panel",
+    "users": "Kullanıcılar",
+    "roles": "Roller",
+    "tenants": "Kiracılar",
+    "plans": "Planlar",
+    "flags": "Özellik Bayrakları",
+    "audit": "Denetim",
+    "sessions": "Oturumlar",
+    "api_keys": "API Anahtarları",
+    "webhooks": "Webhook'lar",
+    "health": "Sağlık"
   },
   "app": {
     "title": "Platform Admin",
@@ -14,12 +23,99 @@
   "user": {
     "logout": "Çıkış Yap"
   },
-  "common": {
-    "success": "Başarılı"
-  },
   "auth": {
     "logged_in": "Giriş başarılı.",
     "registered": "Hesap oluşturuldu.",
     "logged_out": "Çıkış yapıldı."
+  },
+  "common": {
+    "success": "Başarılı",
+    "error": "Hata",
+    "loading": "Yükleniyor",
+    "save": "Kaydet",
+    "cancel": "İptal",
+    "delete": "Sil",
+    "edit": "Düzenle",
+    "add": "Ekle",
+    "create": "Oluştur",
+    "update": "Güncelle",
+    "confirm": "Onayla",
+    "back": "Geri",
+    "next": "Sonraki",
+    "previous": "Önceki",
+    "search": "Ara",
+    "filter": "Filtrele",
+    "actions": "İşlemler",
+    "name": "Ad",
+    "email": "E-posta",
+    "status": "Durum",
+    "created_at": "Oluşturulma",
+    "updated_at": "Güncellenme"
+  },
+  "pages": {
+    "dashboard": "Panel",
+    "users": "Kullanıcılar",
+    "user": "Kullanıcı",
+    "new_user": "Yeni Kullanıcı",
+    "roles": "Roller",
+    "role": "Rol",
+    "tenants": "Kiracılar",
+    "tenant_usage": "Kiracı Kullanımı",
+    "plans": "Planlar",
+    "feature_flags": "Özellik Bayrakları",
+    "audit": "Denetim",
+    "sessions": "Oturumlar",
+    "api_keys": "API Anahtarları",
+    "webhooks": "Webhook'lar",
+    "health": "Sağlık",
+    "rate_limit": "Rate Limit Kotaları",
+    "user_roles": "Kullanıcı Rollerleri",
+    "security_events": "Güvenlik Olayları"
+  },
+  "descriptions": {
+    "dashboard": "Platform genel bakış ve etkinlik",
+    "users": "Platform kullanıcılarını yönet",
+    "user": "Kullanıcı detayları ve ayarlar",
+    "new_user": "Yeni bir platform kullanıcısı oluştur",
+    "roles": "Rolleri ve izinlerini yönet",
+    "role": "Rol detayları ve izinler",
+    "tenants": "Kiracıları yönet (MVP başlık tabanlı çözüm: X-Tenant-Id)",
+    "tenant_usage": "Son 30 gündeki API çağrıları",
+    "plans": "Kiracı planlarını ve limitlerini tanımla",
+    "feature_flags": "Özellik bayraklarını yönet",
+    "audit": "Güvenlik ve denetim olayları",
+    "sessions": "Refresh token tabanlı oturumlar (MVP)",
+    "api_keys": "API anahtar yönetimi (MVP)",
+    "webhooks": "Giden olay teslimatı (MVP)",
+    "health": "Sistem sağlık kontrolleri (toplu)",
+    "rate_limit": "Kiracı ve kullanıcı başına API kotalarını yönet",
+    "user_roles": "Kullanıcı için rol atamalarını yönet",
+    "security_events": "Ham güvenlik olay akışı"
+  },
+  "messages": {
+    "feature_flag_created": "Özellik bayrağı oluşturuldu",
+    "feature_flag_create_failed": "Bayrak oluşturulamadı",
+    "feature_flag_updated": "Özellik bayrağı güncellendi",
+    "feature_flag_update_failed": "Bayrak güncellenemedi",
+    "feature_flag_deleted": "Özellik bayrağı silindi",
+    "feature_flag_delete_failed": "Bayrak silinemedi",
+    "quota_created": "Kota oluşturuldu",
+    "quota_create_failed": "Kota oluşturulamadı",
+    "quota_updated": "Kota güncellendi",
+    "quota_update_failed": "Kota güncellenemedi",
+    "quota_deleted": "Kota silindi",
+    "quota_delete_failed": "Kota silinemedi",
+    "role_created": "Rol oluşturuldu",
+    "role_create_failed": "Rol oluşturulamadı",
+    "role_updated": "Rol güncellendi",
+    "role_update_failed": "Rol güncellenemedi",
+    "role_deleted": "Rol silindi",
+    "role_delete_failed": "Rol silinemedi",
+    "permissions_updated": "İzinler güncellendi",
+    "permissions_update_failed": "İzinler güncellenemedi",
+    "user_roles_updated": "Kullanıcı rolleri güncellendi",
+    "user_roles_update_failed": "Kullanıcı rolleri güncellenemedi",
+    "permissions_update_success": "İzinler başarıyla güncellendi",
+    "permissions_update_error": "İzinler güncellenemedi"
   }
 }
